Fix focus indicator contrast on teaser heading links (WCAG 2.4.7)

--- a/themes/mukurtu_v4/components/04-templates/dictionary/_dictionary-word.scss
+++ b/themes/mukurtu_v4/components/04-templates/dictionary/_dictionary-word.scss
@@ -18,6 +18,11 @@
   &-word {
     display: flex;
     justify-content: space-between;
+
+    &:focus,
+    &:focus-visible {
+      outline-color: var(--color-white);
+    }
   }
 
   svg {
@@ -140,6 +145,11 @@
   &-title {
     display: flex;
     justify-content: space-between;
+
+    &:focus,
+    &:focus-visible {
+      outline-color: var(--color-white);
+    }
 
     svg {
       fill: var(--color-white);
